--- a/Animated 3d Cube/style.css
+++ b/Animated 3d Cube/style.css
@@ -6,6 +6,15 @@
     transform-style: preserve-3d;
     perspective: 1000px;
     transform: rotateX(25deg) rotateY(-25deg);
+    animation: rotations 5s 2 linear  both alternate-reverse;
+}
+@keyframes rotations{
+    from{
+        transform:rotateX(0deg) rotateY(360deg);
+    }
+    to{
+       transform:rotateX(360deg) rotateY(0deg)  ;
+    }
 }
 
 .face{
@@ -14,18 +23,18 @@
     position: absolute;
     top: 20%;
     left: 20%;
-    transition: all 2s ease-in;
+    /*transition: all 2s ease-in-out;*/
     
 }
 .one{
-    background-color: blue;
+    background-color: yellow;
 }
 .two{
-    background-color: orange;
+    background-color: red;
     transform: rotateY(90deg) translateZ(-100px) translateX(100px);
 }
 .three{
-    background-color: red;
+    background-color: orange;
     transform: translateZ(-200px);
 }
 .four{
@@ -33,7 +42,7 @@
     transform: rotateY(90deg) translateX(100px) translateZ(100px);
 }
 .five{
-    background-color: grey;
+    background-color: rgb(240, 54, 215);
     transform: rotateX(90deg) translateY(-100px) translateZ(100px);
 }
 .six{
